<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_list_alt"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_collections"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/title_collections" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_none"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_perm_identity"
        android:title="@string/title_profile" />
</menu>